@@ -63,6 +63,9 @@
     * Add the possibility to log at debug level around interesting events
     * Distinguish wifi from lan
     * Implementation of select/print file functions from local web
+    * File resource endpoint
+    * working `start / stop / pause / resume` job
+    * job info refactoring
 
 0.2.0 (2020-12-14)
 
